# Simplex

./: .gitignore  .replit  LICENSE  README.md  helpers.py  pyproject.toml  requirements.txt  simplex.py  simplex.py.py  test.py
configs/: fontlist-v330.json
